--- a/share/man/man4/man4.sparc/intro.4
+++ b/share/man/man4/man4.sparc/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: intro.4,v 1.51 2007/06/21 19:45:46 jmc Exp $
+.\"     $OpenBSD: intro.4,v 1.52 2008/01/21 21:41:04 jmc Exp $
 .\"	$NetBSD: intro.4,v 1.5 1998/02/06 06:07:00 perry Exp $
 .\"
 .\" Copyright (c) 1996 Jonathan Stone.
@@ -30,7 +30,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate: June 21 2007 $
+.Dd $Mdocdate: January 21 2008 $
 .Dt INTRO 4 sparc
 .Os
 .Sh NAME
@@ -221,7 +221,7 @@ Tadpole PCMCIA Controller
 .Ss Miscellaneous devices
 .Bl -tag -width 12n -compact -offset ind
 .It Xr clock 4
-SPARC64 FireHose Controller
+SPARC clock driver
 .It Xr fdc 4
 NEC765 compatible floppy disk driver
 .It Xr led 4
