--- a/share/man/man4/man4.sparc/clock.4
+++ b/share/man/man4/man4.sparc/clock.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: clock.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
+.\"     $OpenBSD: clock.4,v 1.4 2010/06/07 19:47:54 miod Exp $
 .\"
 .\" Copyright (c) 2004 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: June 7 2010 $
 .Dt CLOCK 4 sparc
 .Os
 .Sh NAME
@@ -34,8 +34,7 @@
 .Cd "clock0 at mainbus0               # sun4c"
 .Cd "clock0 at obio0                  # sun4m"
 .Cd "clock0  at obio0 addr 0xf2000000 # sun4/300"
-.Cd "oclock0 at obio0 addr 0xf3000000 # sun4/200"
-.Cd "oclock0 at obio0 addr 0x03000000 # sun4/100"
+.Cd "oclock0 at obio0 addr 0xf3000000 # sun4/100 and sun4/200"
 .Sh DESCRIPTION
 The
 .Nm
