--- a/share/man/man4/man4.sparc/sw.4
+++ b/share/man/man4/man4.sparc/sw.4
@@ -1,18 +1,18 @@
-.\"	$OpenBSD: sw.4,v 1.7 2003/06/19 20:29:51 deraadt Exp $
+.\"	$OpenBSD: sw.4,v 1.8 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
 .\"
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt SW 4 sparc
 .Os
 .Sh NAME
 .Nm sw
 .Nd NCR 5380 "SCSI Weird" Sun 4/100 on-board SCSI controller
 .Sh SYNOPSIS
-.Cd "sw0     at obio0 addr 0x0a000000 level 3" Pq sun4/100
-.Cd "#sw0     at obio0 addr 0x0a000000 level 3 flags 0x07" Pq sun4/100
+.Cd "sw0     at obio0 addr 0xfa000000 level 3" Pq sun4/100
+.Cd "#sw0     at obio0 addr 0xfa000000 level 3 flags 0x07" Pq sun4/100
 .Cd "scsibus* at sw?"
 .Sh DESCRIPTION
 The
