--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.77 2010/02/11 13:26:33 jmc Exp $
+.\"	$OpenBSD: hier.7,v 1.78 2010/06/20 08:32:03 jmc Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"	@(#)hier.7	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: February 11 2010 $
+.Dd $Mdocdate: June 20 2010 $
 .Dt HIER 7
 .Os
 .Sh NAME
@@ -86,9 +86,8 @@ and the system compat pages:
 .Xr compat_linux 8 ,
 .Xr compat_osf1 8 ,
 .Xr compat_sunos 8 ,
-.Xr compat_svr4 8 ,
 and
-.Xr compat_ultrix 8 ) .
+.Xr compat_svr4 8 ) .
 .It /etc/
 System configuration files and scripts.
 .Pp
