--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.79 2010/06/29 18:50:23 tedu Exp $
+.\"	$OpenBSD: hier.7,v 1.80 2010/06/29 20:30:32 guenther Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -83,7 +83,6 @@ and the system compat pages:
 .Xr compat_freebsd 8 ,
 .Xr compat_ibcs2 8 ,
 .Xr compat_linux 8 ,
-.Xr compat_osf1 8 ,
 .Xr compat_sunos 8 ,
 and
 .Xr compat_svr4 8 ) .
