--- a/share/man/man5/remote.5
+++ b/share/man/man5/remote.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: remote.5,v 1.22 2010/06/29 17:17:53 nicm Exp $
+.\"	$OpenBSD: remote.5,v 1.23 2010/06/29 20:43:49 jmc Exp $
 .\"	$NetBSD: remote.5,v 1.4 1997/04/20 00:05:27 mellon Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -260,7 +260,7 @@ This may be one of
 (always set bit 8 to zero),
 or
 .Dq one
-(always set bit 8 to 1).
+(always set bit 8 to one).
 The default is no parity.
 .It Sy \&pr
 (str)
