--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.82 2010/07/01 17:26:52 tedu Exp $
+.\"	$OpenBSD: hier.7,v 1.83 2010/07/01 18:45:08 jmc Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -82,7 +82,6 @@ and the system compat pages:
 .Xr compat_bsdos 8 ,
 .Xr compat_freebsd 8 ,
 .Xr compat_linux 8 ,
-.Xr compat_sunos 8 ,
 and
 .Xr compat_svr4 8 ) .
 .It /etc/
