--- a/share/man/man4/man4.sparc64/esp.4
+++ b/share/man/man4/man4.sparc64/esp.4
@@ -1,10 +1,10 @@
-.\"	$OpenBSD: esp.4,v 1.8 2006/09/21 15:47:34 jmc Exp $
+.\"	$OpenBSD: esp.4,v 1.9 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
 .\"
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt ESP 4 sparc64
 .Os
 .Sh NAME
@@ -46,7 +46,6 @@ acceptably.
 .Xr sbus 4 ,
 .Xr scsi 4 ,
 .Xr sd 4 ,
-.Xr ss 4 ,
 .Xr st 4 ,
 .Xr uk 4
 .Sh HISTORY
