--- a/share/man/man4/man4.sparc/si.4
+++ b/share/man/man4/man4.sparc/si.4
@@ -1,10 +1,10 @@
-.\"	$OpenBSD: si.4,v 1.7 2003/06/19 20:29:51 deraadt Exp $
+.\"	$OpenBSD: si.4,v 1.8 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
 .\"
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt SI 4 sparc
 .Os
 .Sh NAME
@@ -41,7 +41,6 @@ If no flags are specified, the device will use DMA by default.
 .Xr intro 4 ,
 .Xr scsi 4 ,
 .Xr sd 4 ,
-.Xr ss 4 ,
 .Xr st 4 ,
 .Xr sw 4 ,
 .Xr uk 4
