--- a/share/man/man4/man4.sparc/sw.4
+++ b/share/man/man4/man4.sparc/sw.4
@@ -1,10 +1,10 @@
-.\"	$OpenBSD: sw.4,v 1.8 2007/05/31 19:19:56 jmc Exp $
+.\"	$OpenBSD: sw.4,v 1.9 2010/06/07 19:54:30 miod Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
 .\"
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: June 7 2010 $
 .Dt SW 4 sparc
 .Os
 .Sh NAME
@@ -47,7 +47,6 @@ If no flags are specified, the device will use polled DMA by default.
 .Xr scsi 4 ,
 .Xr sd 4 ,
 .Xr si 4 ,
-.Xr ss 4 ,
 .Xr st 4 ,
 .Xr uk 4
 .Sh HISTORY
