--- a/share/man/man4/man4.vax/sii.4
+++ b/share/man/man4/man4.vax/sii.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: sii.4,v 1.1 2008/08/18 23:19:18 miod Exp $
 .\"
 .\" Copyright (c) 2008 Miodrag Vallat.
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: August 18 2008 $
 .Dt SII 4 vax
 .Os
 .Sh NAME
@@ -38,6 +38,5 @@ Only SCSI operation is supported under
 .Xr intro 4 ,
 .Xr scsi 4 ,
 .Xr sd 4 ,
-.Xr ss 4 ,
 .Xr st 4 ,
 .Xr uk 4
