--- a/share/man/man4/man4.mvme88k/vs.4
+++ b/share/man/man4/man4.mvme88k/vs.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vs.4,v 1.8 2008/01/05 12:47:23 miod Exp $
+.\"	$OpenBSD: vs.4,v 1.9 2008/01/05 21:02:15 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -133,7 +133,6 @@ The only supported configurations for the top row are:
 .Xr intro 4 ,
 .Xr scsi 4 ,
 .Xr sd 4 ,
-.Xr ss 4 ,
 .Xr st 4 ,
 .Xr uk 4 ,
 .Xr vme 4
