--- a/share/man/man4/man4.vax/asc.4
+++ b/share/man/man4/man4.vax/asc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: asc.4,v 1.5 2006/06/26 22:16:23 miod Exp $
+.\"	$OpenBSD: asc.4,v 1.6 2007/05/31 19:19:57 jmc Exp $
 .\"
 .\" Copyright (c) 1996 Jonathan Stone.
 .\" Copyright (c) 2000 Matt Thomas.
@@ -31,7 +31,7 @@
 .\"
 .\"	$NetBSD: asc.4,v 1.7 2002/01/15 02:03:42 wiz Exp $
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt ASC 4 vax
 .Os
 .Sh NAME
@@ -88,7 +88,6 @@ will suffer.
 .Xr intro 4 ,
 .Xr scsi 4 ,
 .Xr sd 4 ,
-.Xr ss 4 ,
 .Xr st 4 ,
 .Xr uk 4
 .Sh HISTORY
