--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.53 2010/05/25 08:57:51 jmc Exp $
+.\"	$OpenBSD: port-modules.5,v 1.54 2010/06/15 21:21:54 jasper Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 25 2010 $
+.Dd $Mdocdate: June 15 2010 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -416,8 +416,8 @@ Appends to RUN_DEPENDS and CATEGORIES.
 Also appends to BUILD_DEPENDS,
 unless NO_BUILD has been set to Yes.
 .It lang/mono
-Sets ONLY_FOR_ARCHS, CONFIGURE_ENV, MAKE_FLAGS, MODMONO_BUILD_DEPENDS
-and MODMONO_RUN_DEPENDS.
+Sets MODMONO_ONLY_FOR_ARCHS, CONFIGURE_ENV, MAKE_FLAGS,
+MODMONO_BUILD_DEPENDS and MODMONO_RUN_DEPENDS.
 If MODMONO_DEPS is set to Yes,
 .Pa lang/mono
 is appended to BUILD_DEPENDS and RUN_DEPENDS.
