--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.252 2010/07/06 16:22:25 jmc Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.253 2010/07/10 09:12:02 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: July 6 2010 $
+.Dd $Mdocdate: July 10 2010 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -1051,7 +1051,7 @@ actions.
 Silent by default.
 .It Ev EPOCH
 Epoch number of the current package.
-Defaults to empty (no need for numbering changes).
+Defaults to empty (no need for numbering changes), then
 numbering starts at 0.
 Gets automatically incorporated into
 .Ev FULLPKGNAME
