--- a/share/man/man4/man4.sparc/timer.4
+++ b/share/man/man4/man4.sparc/timer.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: timer.4,v 1.2 2004/09/28 22:05:07 jmc Exp $
+.\"     $OpenBSD: timer.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,14 +24,14 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt TIMER 4 sparc
 .Os
 .Sh NAME
 .Nm timer
 .Nd SPARC Timer
 .Sh SYNOPSIS
-.Cd "timer0 at mainbus0              # sun4c"
+.Cd "timer0 at mainbus0              # sun4c and sun4e"
 .Cd "timer0 at obio0                 # sun4m"
 .Cd "timer0 at obio0 addr 0xef000000 # sun4/300"
 .Sh DESCRIPTION
