--- a/share/man/man4/man4.sparc/bpp.4
+++ b/share/man/man4/man4.sparc/bpp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: bpp.4,v 1.2 2004/09/30 19:59:27 mickey Exp $
+.\"     $OpenBSD: bpp.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,14 +24,14 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt BPP 4 sparc
 .Os
 .Sh NAME
 .Nm bpp
 .Nd SPARC bi-directional parallel port
 .Sh SYNOPSIS
-.Cd "bpp at sbus? " Pq "sun4c/sun4m"
+.Cd "bpp at sbus? " Pq "sun4c/sun4e/sun4m"
 .Sh DESCRIPTION
 The
 .Nm
