--- a/share/man/man4/man4.sparc/auxreg.4
+++ b/share/man/man4/man4.sparc/auxreg.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: auxreg.4,v 1.2 2003/11/03 03:02:23 david Exp $
+.\"     $OpenBSD: auxreg.4,v 1.3 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,14 +24,14 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt AUXREG 4 sparc
 .Os
 .Sh NAME
 .Nm auxreg
 .Nd SPARC auxiliary register
 .Sh SYNOPSIS
-.Cd "auxreg0 at mainbus0                          " Pq "sun4c"
+.Cd "auxreg0 at mainbus0                          " Pq "sun4c and sun4e"
 .Cd "auxreg0 at obio0                             " Pq "sun4m"
 .Sh DESCRIPTION
 The
