--- a/share/man/man4/man4.sparc/qec.4
+++ b/share/man/man4/man4.sparc/qec.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qec.4,v 1.17 2006/10/28 10:26:26 jmc Exp $
+.\"     $OpenBSD: qec.4,v 1.18 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,14 +24,14 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt QEC 4 sparc
 .Os
 .Sh NAME
 .Nm qec
 .Nd SPARC Quad Ethernet Controller
 .Sh SYNOPSIS
-.Cd "qec* at sbus?   " Pq "sun4c/sun4m"
+.Cd "qec* at sbus?   " Pq "sun4c/sun4e/sun4m"
 .Cd "qe* at qec?"
 .Cd "be* at qec?"
 .Sh DESCRIPTION
