--- a/share/man/man4/man4.sparc/spif.4
+++ b/share/man/man4/man4.sparc/spif.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: spif.4,v 1.14 2005/09/30 20:34:25 jaredy Exp $
+.\"     $OpenBSD: spif.4,v 1.15 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,16 +24,16 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt SPIF 4 sparc
 .Os
 .Sh NAME
 .Nm spif
 .Nd SBus (spiffy) Serial/Parallel Interface
 .Sh SYNOPSIS
-.Cd "spif* at sbus?   " Pq "sun4c/sun4m"
-.Cd "stty* at spif?   " Pq "sun4c/sun4m"
-.Cd "sbpp* at spif?   " Pq "sun4c/sun4m"
+.Cd "spif* at sbus?   " Pq "sun4c/sun4e/sun4m"
+.Cd "stty* at spif?   " Pq "sun4c/sun4e/sun4m"
+.Cd "sbpp* at spif?   " Pq "sun4c/sun4e/sun4m"
 .Sh DESCRIPTION
 The
 .Nm spif
