--- a/share/man/man4/man4.sparc/qe.4
+++ b/share/man/man4/man4.sparc/qe.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qe.4,v 1.12 2007/05/31 19:19:56 jmc Exp $
+.\"     $OpenBSD: qe.4,v 1.13 2008/03/31 07:44:30 jmc Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,15 +24,15 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: March 31 2008 $
 .Dt QE 4 sparc
 .Os
 .Sh NAME
 .Nm qe
 .Nd SPARC 10/100 Ethernet device
 .Sh SYNOPSIS
-.Cd "qec* at sbus?   " Pq "sun4c/sun4m"
-.Cd "qe* at qec?     " Pq "sun4c/sun4m"
+.Cd "qec* at sbus?   " Pq "sun4c/sun4e/sun4m"
+.Cd "qe* at qec?     " Pq "sun4c/sun4e/sun4m"
 .Sh DESCRIPTION
 The
 .Nm
