--- a/share/man/man4/man4.sparc/led.4
+++ b/share/man/man4/man4.sparc/led.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: led.4,v 1.4 2003/06/02 18:51:34 jason Exp $
+.\"     $OpenBSD: led.4,v 1.5 2007/05/31 19:19:56 jmc Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,14 +24,14 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt LED 4 sparc
 .Os
 .Sh NAME
 .Nm led
 .Nd SPARC LED driver
 .Sh SYNOPSIS
-.Cd "led0 at mainbus0                              " Pq "sun4"
+.Cd "led0 at mainbus0                              " Pq "sun4 and sun4e"
 .Cd "led0 at obio0                                 " Pq "sun4m: 4/600"
 .Sh DESCRIPTION
 The
