--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.60 2010/07/21 17:31:51 steven Exp $
+.\"	$OpenBSD: port-modules.5,v 1.61 2010/07/22 10:42:37 ajacoutot Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: July 21 2010 $
+.Dd $Mdocdate: July 22 2010 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -480,6 +480,7 @@ Also affects CONFIGURE_ENV, MAKE_ENV and MAKE_FLAGS by appending
 MODINTLTOOL_OVERRIDE to them.
 .It www/drupal5
 .It www/drupal6
+.It www/horde
 .It www/mozilla
 Sets PKGNAME, HOMEPAGE, MASTER_SITES, DISTNAME, USE_GMAKE, ONLY_FOR_ARCHS and
 SHARED_ONLY.
