--- a/usr.sbin/ldpd/ldpd.conf.5
+++ b/usr.sbin/ldpd/ldpd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldpd.conf.5,v 1.3 2010/01/02 19:44:53 schwarze Exp $
+.\"	$OpenBSD: ldpd.conf.5,v 1.4 2010/01/02 21:29:56 jmc Exp $
 .\"
 .\" Copyright (c) 2009 Michele Marchetto <michele@openbsd.org>
 .\" Copyright (c) 2005, 2006 Esben Norby <norby@openbsd.org>
@@ -66,7 +66,7 @@ Global settings concerns the main behaviour of the daemon.
 .Pp
 .Bl -tag -width Ds -compact
 .It Xo
-.Ic lfib-update
+.Ic fib-update
 .Pq Ic yes Ns \&| Ns Ic no
 .Xc
 If set to
