--- a/usr.sbin/httpd/src/support/apachectl.8
+++ b/usr.sbin/httpd/src/support/apachectl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: apachectl.8,v 1.8 2007/05/31 19:20:24 jmc Exp $
+.\"	$OpenBSD: apachectl.8,v 1.9 2008/06/07 01:59:36 jdixon Exp $
 .\"
 .\" ====================================================================
 .\" The Apache Software License, Version 1.1
@@ -57,7 +57,7 @@
 .\" originally written at the National Center for Supercomputing Applications,
 .\" University of Illinois, Urbana-Champaign.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: June 7 2008 $
 .Dt APACHECTL 8
 .Os
 .Sh NAME
@@ -153,8 +153,7 @@ except that the list of requests currently being served is omitted.
 Stop
 .Xr httpd 8 .
 .El
-.Pp
-.Ex -std apachectl
+.Sh EXIT STATUS
 The exit codes returned are:
 .Pp
 .Bl -tag -width "XXX" -offset indent -compact
