--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.260 2010/08/08 12:37:59 jmc Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.261 2010/09/06 12:06:56 jasper Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 8 2010 $
+.Dd $Mdocdate: September 6 2010 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -1855,7 +1855,7 @@ Read-only.
 .Ev SUBST_CMD
 can be used like
 .Xr install 1 :
-.Dl ${SUBST_CMD} Oo Fl g Ar group Oc Oo Fl m Ar mode Oc Oo Fl o Ar owner Oc file...
+.Dl ${SUBST_CMD} Oo Fl g Ar group Oc Oo Fl o Ar owner Oc file...
 to set file
 .Ar owner ,
 .Ar group
