--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.85 2010/07/05 22:26:20 tedu Exp $
+.\"	$OpenBSD: hier.7,v 1.86 2010/08/10 20:34:15 sobrado Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"	@(#)hier.7	8.1 (Berkeley) 6/5/93
 .\"
-.Dd $Mdocdate: July 5 2010 $
+.Dd $Mdocdate: August 10 2010 $
 .Dt HIER 7
 .Os
 .Sh NAME
@@ -637,9 +637,6 @@ Log files for
 .Pp
 .It mail/
 User mailbox files.
-.It msgs/
-Database for
-.Xr msgs 1 .
 .It named/
 Chroot directory for
 .Xr named 8 .
