--- a/usr.sbin/ldapd/ldapd.8
+++ b/usr.sbin/ldapd/ldapd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldapd.8,v 1.2 2010/07/21 06:32:14 martinh Exp $
+.\"	$OpenBSD: ldapd.8,v 1.3 2010/09/24 10:10:58 lum Exp $
 .\"
 .\" Copyright (c) 2009, 2010 Martin Hedenfalk <martin@bzero.se>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: July 21 2010 $
+.Dd $Mdocdate: September 24 2010 $
 .Dt LDAPD 8
 .Os
 .Sh NAME
@@ -24,7 +24,7 @@
 .Nm ldapd
 .Op Fl dnv
 .Oo
-.Fl D Ar macro Ns = Ns value
+.Fl D Ar macro Ns = Ns Ar value
 .Oc
 .Op Fl f Ar file
 .Op Fl s Ar file
