--- a/usr.sbin/iscsid/iscsid.8
+++ b/usr.sbin/iscsid/iscsid.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: iscsid.8,v 1.1 2010/09/24 10:53:14 dlg Exp $
+.\"	$OpenBSD: iscsid.8,v 1.2 2010/09/25 11:57:22 sobrado Exp $
 .\"
 .\" Copyright (c) 2010 David Gwynne <dlg@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 24 2010 $
+.Dd $Mdocdate: September 25 2010 $
 .Dt ISCSID 8
 .Os
 .Sh NAME
@@ -81,4 +81,4 @@ The
 program first appeared in
 .Ox 4.9 .
 .Sh AUTHORS
-.An Claudio Jeker Aq claudio@openbsd.org .   
+.An Claudio Jeker Aq claudio@openbsd.org .
