--- a/share/man/man5/changelist.5
+++ b/share/man/man5/changelist.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: changelist.5,v 1.4 2007/09/06 07:01:34 jmc Exp $
+.\"	$OpenBSD: changelist.5,v 1.5 2009/05/18 19:37:47 schwarze Exp $
 .\"
 .\" Copyright (c) 2003 Jason McIntyre <jmc@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 6 2007 $
+.Dd $Mdocdate: May 18 2009 $
 .Dt CHANGELIST 5
 .Os
 .Sh NAME
@@ -111,7 +111,7 @@ Maintenance script which runs
 .It Pa /etc/security
 Shell script which reads
 .Pa /etc/changelist .
-.It /var/backups/
+.It Pa /var/backups/
 Directory containing file backups.
 .El
 .Sh SEE ALSO
