--- a/usr.bin/getent/getent.1
+++ b/usr.bin/getent/getent.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getent.1,v 1.7 2010/01/03 14:31:01 schwarze Exp $
+.\"	$OpenBSD: getent.1,v 1.8 2010/09/29 07:44:56 jmc Exp $
 .\"	$NetBSD: getent.1,v 1.13 2005/09/11 23:16:15 wiz Exp $
 .\"
 .\" Copyright (c) 2004 The NetBSD Foundation, Inc.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: January 3 2010 $
+.Dd $Mdocdate: September 29 2010 $
 .Dt GETENT 1
 .Os
 .Sh NAME
@@ -97,7 +97,7 @@ will be retrieved using the appropriate enumeration function and printed.
 .Sh EXIT STATUS
 The
 .Nm
-utility exits with one of the following value:
+utility exits with one of the following values:
 .Pp
 .Bl -tag -width Ds -offset indent -compact
 .It 0
