--- a/usr.bin/dc/dc.1
+++ b/usr.bin/dc/dc.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dc.1,v 1.24 2010/01/02 19:48:56 schwarze Exp $
+.\"	$OpenBSD: dc.1,v 1.25 2010/09/19 21:30:04 jmc Exp $
 .\"
 .\" Copyright (C) Caldera International Inc.  2001-2002.
 .\" All rights reserved.
@@ -34,7 +34,7 @@
 .\"
 .\"	@(#)dc.1	8.1 (Berkeley) 6/6/93
 .\"
-.Dd $Mdocdate: January 2 2010 $
+.Dd $Mdocdate: September 19 2010 $
 .Dt DC 1
 .Os
 .Sh NAME
@@ -498,12 +498,6 @@ operator.
 .El
 .Sh SEE ALSO
 .Xr bc 1
-.Rs
-.%B USD:05
-.%A L. L. Cherry
-.%A R. Morris
-.%T "DC \- An Interactive Desk Calculator"
-.Re
 .Sh STANDARDS
 The arithmetic operations of the
 .Nm
