--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.264 2010/10/04 10:35:24 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.265 2010/10/04 16:04:27 jmc Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -1990,6 +1990,13 @@ If set to empty, will revert to a file under
 Set to
 .Sq Yes
 if GNU make (${GMAKE}) is needed for correct behavior of this port.
+.It Ev USE_GROFF
+Set to
+.Sq Yes
+to use groff to build manpages.
+This sets groff as a build dependency, and also tells
+.Xr pkg_create 1
+to format manpages behind the scene using groff while building packages.
 .It Ev USE_LIBTOOL
 Set to
 .Sq Yes
