--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.73 2010/10/23 15:29:02 ajacoutot Exp $
+.\"	$OpenBSD: port-modules.5,v 1.74 2010/10/24 09:18:07 sthen Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: October 23 2010 $
+.Dd $Mdocdate: October 24 2010 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -393,7 +393,8 @@ Makefile.
 .It fortran
 Sets MODFORTRAN_LIB_DEPENDS, MODFORTRAN_WANTLIB, MODFORTRAN_BUILD_DEPENDS.
 Set MODFORTRAN_COMPILER to `g77' or `gfortran', depending on what the
-port requires. The default is `g77'.
+port requires.
+The default is `g77'.
 The dependencies are chosen according to COMPILER_VERSION and
 MODFORTRAN_COMPILER.
 .It gcc3
