--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.76 2010/10/24 15:54:58 sthen Exp $
+.\"	$OpenBSD: port-modules.5,v 1.77 2010/10/24 20:43:31 ajacoutot Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -152,6 +152,12 @@ and before
 .Ev REORDER_DEPENDENCIES
 touches things.
 .It Ar configure
+There is a
+.Ar pre-configure
+hook that can be activated by defining
+.Ev MODFOO_pre-configure .
+It will be run right after
+.Ar pre-configure .
 The normal
 .Ar do-configure
 behavior is to invoke all
