--- a/share/man/man7/mandoc_char.7
+++ b/share/man/man7/mandoc_char.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mandoc_char.7,v 1.4 2010/04/04 13:41:23 schwarze Exp $
+.\"	$OpenBSD: mandoc_char.7,v 1.5 2010/05/14 15:03:01 schwarze Exp $
 .\"
 .\" Copyright (c) 2009 Kristaps Dzonsons <kristaps@bsd.lv>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: April 4 2010 $
+.Dd $Mdocdate: May 14 2010 $
 .Dt MANDOC_CHAR 7
 .Os
 .Sh NAME
@@ -516,8 +516,7 @@ implementations:
 .Sh COMPATIBILITY
 This section documents compatibility of
 .Nm
-with older or existing versions of
-.Xr groff 1 .
+with older or existing versions of groff.
 .Pp
 The following render differently in
 .Fl T Ns Ar ascii
