--- a/usr.bin/getopt/getopt.1
+++ b/usr.bin/getopt/getopt.1
@@ -1,9 +1,9 @@
-.\"	$OpenBSD: getopt.1,v 1.14 2007/05/31 19:20:10 jmc Exp $	-*- nroff -*-
+.\"	$OpenBSD: getopt.1,v 1.15 2009/04/12 23:13:36 okan Exp $
 .\"
 .\" This material, written by Henry Spencer, was released by him
 .\" into the public domain and is thus not subject to any copyright.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: April 12 2009 $
 .Dt GETOPT 1
 .Os
 .Sh NAME
