--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.90 2010/10/28 17:55:04 jmc Exp $
+.\"	$OpenBSD: hier.7,v 1.91 2010/10/28 21:38:16 jmc Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -407,10 +407,7 @@ Custom word lists.
 .El
 .Pp
 .It doc/
-Miscellaneous documentation;
-source for most of the
-.Bx 4.3
-manuals.
+Miscellaneous documentation.
 .Pp
 .Bl -tag -width html/ -compact
 .It html/
