--- a/bin/md5/cksum.1
+++ b/bin/md5/cksum.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cksum.1,v 1.21 2010/03/26 19:30:40 jmc Exp $
+.\"	$OpenBSD: cksum.1,v 1.22 2010/07/12 23:16:55 tedu Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\"	@(#)cksum.1	8.2 (Berkeley) 4/28/95
 .\"
-.Dd $Mdocdate: March 26 2010 $
+.Dd $Mdocdate: July 12 2010 $
 .Dt CKSUM 1
 .Os
 .Sh NAME
@@ -263,7 +263,7 @@ The bit sequence is complemented and the result is the CRC.
 .Pp
 The other available algorithms are described in their respective
 man pages in section 3 of the manual.
-.Pp
+.Sh EXIT STATUS
 The
 .Nm cksum
 and
