--- a/share/man/man5/port-modules.5
+++ b/share/man/man5/port-modules.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: port-modules.5,v 1.80 2010/11/09 17:39:10 jeremy Exp $
+.\"	$OpenBSD: port-modules.5,v 1.81 2010/12/02 01:39:57 jeremy Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: November 9 2010 $
+.Dd $Mdocdate: December 2 2010 $
 .Dt PORT-MODULES 5
 .Os
 .Sh NAME
@@ -344,6 +344,9 @@ Also affects REGRESS_DEPENDS, CONFIGURE_STYLE, PKG_ARCH, and CATEGORIES.
 .Pp
 Some CPAN modules are only indexed by author, set CPAN_AUTHOR=ID
 to locate the right directory.
+.Pp
+If no HOMEPAGE is defined, it will default to
+http://search.cpan.org/dist/${DISTNAME:C/-[^-]*$//}/
 .Pp
 User settings: set CPAN_REPORT to Yes, CPAN_REPORT_DB to a valid directory,
 and CPAN_REPORT_FROM to a valid email address to automate the reporting
