--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.210 2010/10/18 22:30:29 halex Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.211 2010/11/01 05:24:58 deraadt Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)ifconfig.8	8.4 (Berkeley) 6/1/94
 .\"
-.Dd $Mdocdate: October 18 2010 $
+.Dd $Mdocdate: November 1 2010 $
 .Dt IFCONFIG 8
 .Os
 .Sh NAME
@@ -1321,7 +1321,7 @@ Clear a previously set service name.
 .Ek
 .nr nS 0
 .Pp
-The following options are availble for an
+The following options are available for an
 .Xr sppp 4
 or
 .Xr pppoe 4
