--- a/bin/mv/mv.1
+++ b/bin/mv/mv.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mv.1,v 1.26 2010/09/03 09:53:20 jmc Exp $
+.\"	$OpenBSD: mv.1,v 1.27 2010/12/27 23:27:53 schwarze Exp $
 .\"	$NetBSD: mv.1,v 1.8 1995/03/21 09:06:51 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -33,7 +33,7 @@
 .\"
 .\"	@(#)mv.1	8.1 (Berkeley) 5/31/93
 .\"
-.Dd $Mdocdate: September 3 2010 $
+.Dd $Mdocdate: December 27 2010 $
 .Dt MV 1
 .Os
 .Sh NAME
@@ -173,7 +173,7 @@ In the second synopsis form, incompatible file types in
 .Ar source
 and
 .Ar directory
-cause partial moves:
+cause partial moves.
 For example, if
 .Pa f
 and
