--- a/share/man/man7/man.7
+++ b/share/man/man7/man.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: man.7,v 1.11 2010/12/19 08:07:38 schwarze Exp $
+.\"	$OpenBSD: man.7,v 1.12 2011/01/09 12:49:22 schwarze Exp $
 .\"
 .\" Copyright (c) 2009, 2010 Kristaps Dzonsons <kristaps@bsd.lv>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: December 19 2010 $
+.Dd $Mdocdate: January 9 2011 $
 .Dt MAN 7
 .Os
 .Sh NAME
@@ -907,7 +907,9 @@ In GNU troff, this would result in strange behaviour.
 .Xr man 1 ,
 .Xr mandoc 1 ,
 .Xr mandoc_char 7 ,
-.Xr mdoc 7
+.Xr mdoc 7 ,
+.Xr roff 7 ,
+.Xr tbl 7
 .Sh HISTORY
 The
 .Nm
