--- a/share/man/man7/man.7
+++ b/share/man/man7/man.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: man.7,v 1.12 2011/01/09 12:49:22 schwarze Exp $
+.\"	$OpenBSD: man.7,v 1.13 2011/01/09 15:24:57 schwarze Exp $
 .\"
 .\" Copyright (c) 2009, 2010 Kristaps Dzonsons <kristaps@bsd.lv>
 .\"
@@ -59,6 +59,9 @@ line termination.
 .Pp
 Blank lines are acceptable; where found, the output will assert a
 vertical space.
+.Pp
+If the first character of a line is a space, that line is printed
+with a leading newline.
 .Ss Comments
 Text following a
 .Sq \e\*q ,
