--- a/share/man/man4/man4.sparc64/zs.4
+++ b/share/man/man4/man4.sparc64/zs.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: zs.4,v 1.15 2009/05/20 18:22:32 miod Exp $
+.\"	$OpenBSD: zs.4,v 1.16 2009/05/20 20:13:42 jmc Exp $
 .\"
 .\" Copyright (c) 1998, 2002 The OpenBSD Project
 .\" All rights reserved.
@@ -137,7 +137,7 @@ This switches off the
 .Dq dead accents .
 .Sh EXAMPLES
 To set a German keyboard layout, use
-.Ic wsconsctl -w keyboard.encoding=de .
+.Ic wsconsctl keyboard.encoding=de .
 To set it at kernel build time, add
 the following to the kernel configuration file for a type 4 keyboard:
 .Bd -literal -offset indent
