--- a/usr.bin/diff/diff.1
+++ b/usr.bin/diff/diff.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: diff.1,v 1.38 2010/08/18 16:25:20 schwarze Exp $
+.\" $OpenBSD: diff.1,v 1.39 2010/09/03 11:09:28 jmc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"     @(#)diff.1	8.1 (Berkeley) 6/30/93
 .\"
-.Dd $Mdocdate: August 18 2010 $
+.Dd $Mdocdate: September 3 2010 $
 .Dt DIFF 1
 .Os
 .Sh NAME
@@ -471,6 +471,14 @@ An error occurred.
 .Xr ed 1 ,
 .Xr patch 1 ,
 .Xr sdiff 1
+.Rs
+.%A James W. Hunt
+.%A M. Douglas McIlroy
+.%T "An Algorithm for Differential File Comparison"
+.%J Computing Science Technical Report
+.%Q Bell Laboratories 41
+.%D June 1976
+.Re
 .Sh STANDARDS
 The
 .Nm
