--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ls.1,v 1.63 2011/03/04 21:03:19 okan Exp $
+.\"	$OpenBSD: ls.1,v 1.64 2011/03/05 15:46:02 jmc Exp $
 .\"	$NetBSD: ls.1,v 1.14 1995/12/05 02:44:01 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1991, 1993, 1994
@@ -33,7 +33,7 @@
 .\"
 .\"     @(#)ls.1	8.7 (Berkeley) 7/29/94
 .\"
-.Dd $Mdocdate: March 4 2011 $
+.Dd $Mdocdate: March 5 2011 $
 .Dt LS 1
 .Os
 .Sh NAME
@@ -275,9 +275,9 @@ options are given, the following information
 is displayed for each file:
 mode,
 number of links,
-owner,
-group (though not for
+owner (though not for
 .Fl g ) ,
+group,
 size in bytes,
 time of last modification
 .Pq Dq mmm dd HH:MM ,
